Fri Oct  6 22:07:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Oct  2 16:39:49 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* prof_init.c (profile_init_path): Add const declarations.

Tue Sep 26 20:00:28 1995  Mark Eichin  <eichin@cygnus.com>

	* prof_init.c (profile_init_path): takes a single string entry
	that has pathnames seperated by colons, and splits it into
	file names for profile_init. No provision for quoting colons in
	pathnames, but shells don't solve that either.

Tue Sep 26 19:23:59 1995  Mark Eichin  <eichin@cygnus.com>

	* prof_init.c (profile_init): handle multiple input files by
	grabbing the first one that doesn't return ENOENT.

Mon Sep 25 16:42:13 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Fri Sep 22 19:51:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* prof_int.h: added SIZEOF defines for the PC, and added missing
		prototype for profile_find_node_name()

	* prof_init.c (profile_get_first_values): Remove unused variables.

Mon Sep 11 15:30:52 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* prof_parse.c (dump_profile_to_file): Convert C+ comment to
		standard C one.

Tue Aug 29 14:23:16 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add checks for size of short, int and long.
	* prof_init.c - Add routines to serialize profile context.

Tue Aug 15 17:17:40 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* prof_parse.c (strip_line,parse_line): Declare as static.

	* prof_int.h: Add missing prototypes

Thu Jul  6 10:05:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* prof_file.c: prof_int.h must be included after stdio.h

Wed July 5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* prof_file.c added conditionals for sys/*.h include files
	* prof_int.h added _MACINTOSH conditional
	* test_parse.c added _MACINTOSH conditional
