@@ -7,6 +7,7 @@ AC_PROG_RANLIB
 AC_CHECK_SIZEOF(short)
 AC_CHECK_SIZEOF(int)
 AC_CHECK_SIZEOF(long)
+AC_HAVE_FUNCS(stat)
 ET_RULES
 V5_SHARED_LIB_OBJS
 CopyHeader(profile.h,$(BUILDTOP)/include)
